# bricolle-family

./: .gitignore  AGENTS.md  Dockerfile  IDEAS.md  README.md  TLS_SETUP.md  backup_db.sh  deploy.sh  docker-compose.yml  locale.dic  makefile  manage.py  optimize_memory.sh  pyproject.toml  pytest.ini
.github/workflows/: django.yml
agathe/: apps.py  signals.py  urls.py
agathe/constants/: agathe.py
agathe/forms/: diaper_change.py  pit_stop.py
agathe/migrations/: 0001_initial.py  0002_vitaminintake.py  0003_bath.py  (+5 more)
albion_online/: apps.py  architecture.md  tasks.py  urls.py
altered/: IDEAS.md  apps.py  forms.py  signals.py  urls.py
baby_name/: IDEAS.md  admin.py  apps.py  models.py  urls.py  views.py
babyberon/: apps.py  urls.py
battery_simulator/: apps.py  urls.py
bricolle_family/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
capitalism/: apps.py  signals.py  urls.py
chess/: urls.py
civilization7/: apps.py  urls.py
corwave/: apps.py  tasks.py  urls.py
docs/: 1777811530.run  prod_502.md
documents/: urls.py
finance_simulator/: apps.py  forms.py  urls.py
flash_cards/: MCP_RUNNER.md  apps.py  mcp_server.json  openapi_flash_cards.yaml  urls.py
games_collection/: apps.py  urls.py
habit_tracker/: IDEAS.md  admin.py  urls.py
helpinglouis/: admin.py  apps.py  enum.py  models.py  urls.py  views.py
mysite/: settings.py  urls.py
nginx/: default.conf
northguard/: IDEAS  IDEAS.md  apps.py  urls.py
runeterra/: apps.py  urls.py  views.py
scripts/: manage_certs.sh
seven_and_half/: apps.py  urls.py
shopping_list/: IDEAS.md  admin.py  apps.py  signals.py  urls.py
silksong/: admin.py  apps.py  urls.py
slay_the_spire2/: apps.py  tasks.py  urls.py
sport/: urls.py
static/: keystrokes.js
the_bazaar/: IDEAS.md  __init__.py  apps.py  urls.py
(+1118 files in other folders)
