[tool.poetry]
name = "bricolle-family"
version = "0.1.0"
description = ""
authors = ["Louis Nicolle <louisxnicolle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-bootstrap-v5 = "^1.0.11"
gunicorn = "^21.2.0"
whitenoise = "^6.9.0"
psycopg = "^3.2.6"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"