[tool.poetry]
name = "bricolle_family"
version = "0.1.0"
description = ""
authors = ["Louis Nicolle <louisxnicolle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-bootstrap-v5 = "^1.0.11"
gunicorn = "^21.2.0"
whitenoise = "^6.9.0"
psycopg = "^3.2.6"
dj-database-url = "^2.3.0"
unidecode = "^1.3.8"
plotly = "^6.0.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
python-decouple = "^3.8"
django-filter = "^25.1"
django-widget-tweaks = "^1.5.0"
requests = "^2.32.3"
markdown = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.10.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
